addons/monitoring/manifests/plutono/service.yaml
# SPDX-FileCopyrightText: © 2023 Siemens Healthcare GmbH
#
# SPDX-License-Identifier: MIT

---
# Source: kube-prometheus-stack/charts/grafana/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-prometheus-stack-plutono
  namespace: monitoring
  labels:
    helm.sh/chart: grafana-6.57.4
    app.kubernetes.io/name: kube-prometheus-stack-plutono
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/version: "9.5.5"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: http-web
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/name: kube-prometheus-stack-plutono
    app.kubernetes.io/instance: kube-prometheus-stack
