addons/monitoring/manifests/plutono/ingress-traefik.yaml
# SPDX-FileCopyrightText: © 2023 Siemens Healthcare GmbH
#
# SPDX-License-Identifier: MIT

# This web application can be configured to re-encode its relative URLs
# with a configurable prefix, see file `configmap.yaml`:
# root_url = https://k2s-monitoring.cluster.local/monitoring
# This enables us to expose it trough the ingress under this configured path
---
# this ingress will be merged with ingress provided in:
# addons/ingress/traefik/manifests/cluster-net-ingress.yaml
# and exposes the plutono web application on:
# https://k2s.cluster.local/monitoring/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-traefik-cluster-net
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: k2s.cluster.local
      http:
        paths:
          - backend:
              service:
                name: kube-prometheus-stack-plutono
                port:
                  number: 443
            path: /monitoring/
            pathType: Prefix
